--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -153,9 +153,11 @@ input, textarea {
 
 :focus { outline-color: var(--orange-yellow-crayola); }
 
-html { font-family: var(--ff-poppins); }
+html { font-family: var(--ff-poppins) !important; }
 
-body { background: var(--smoky-black); }
+body { background: var(--smoky-black) !important;
+font-family: unset !important;
+}
 
 
 
@@ -454,7 +456,7 @@ main {
   #NAVBAR
 \*-----------------------------------*/
 
-.navbar {
+.navbar-top {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -467,7 +469,7 @@ main {
   z-index: 5;
 }
 
-.navbar-list {
+.navbar-top-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -475,17 +477,17 @@ main {
   padding: 0 10px;
 }
 
-.navbar-link {
+.navbar-top-link {
   color: var(--light-gray);
   font-size: var(--fs-8);
   padding: 20px 7px;
   transition: color var(--transition-1);
 }
 
-.navbar-link:hover,
-.navbar-link:focus { color: var(--light-gray-70); }
+.navbar-top-link:hover,
+.navbar-top-link:focus { color: var(--light-gray-70); }
 
-.navbar-link.active { color: var(--orange-yellow-crayola); }
+.navbar-top-link.active { color: var(--orange-yellow-crayola); }
 
 
 
@@ -1373,11 +1375,11 @@ textarea.form-input::-webkit-resizer { display: none; }
    * #NAVBAR
    */
 
-  .navbar { border-radius: 20px 20px 0 0; }
+  .navbar-top { border-radius: 20px 20px 0 0; }
 
-  .navbar-list { gap: 20px; }
+  .navbar-top-list { gap: 20px; }
 
-  .navbar-link { --fs-8: 14px; }
+  .navbar-top-link { --fs-8: 14px; }
 
 
 
@@ -1576,7 +1578,7 @@ textarea.form-input::-webkit-resizer { display: none; }
    * NAVBAR
    */
 
-  .navbar-link { --fs-8: 15px; }
+  .navbar-top-link { --fs-8: 15px; }
 
 
 
@@ -1698,7 +1700,7 @@ textarea.form-input::-webkit-resizer { display: none; }
    * NAVBAR
    */
 
-  .navbar {
+  .navbar-top {
     position: absolute;
     bottom: auto;
     top: 0;
@@ -1710,12 +1712,12 @@ textarea.form-input::-webkit-resizer { display: none; }
     box-shadow: none;
   }
 
-  .navbar-list {
+  .navbar-top-list {
     gap: 30px;
     padding: 0 20px;
   }
 
-  .navbar-link { font-weight: var(--fw-500); }
+  .navbar-top-link { font-weight: var(--fw-500); }
 
 
 
